src/MainContainer.css
.MainContainer {
  text-align: center;
  height: 100vh;
  background-color: #282c34;
  color: #fff;
  position: relative;
}

.non-footer-content {
  height: calc(100% - 64px);
  overflow: auto;
}

.top-row {
  padding: 15px;
}

.reset-button {
  float: left;
}

.anxiety-button {
  float: right;
}

#anxiety-container {
  padding-top: 15vh;
}

.footer {
  position: absolute;
  bottom: 0;
  width: 100%;
  margin: auto;
  font-size: 0.9em;
  height: 64px;
}

.footer a {
  color: #fff;
}

/* .footer .col {
  position: relative;
}

.footer .col .bottom {
  position: absolute;
  bottom: 0;
  left: 0;
  right: 0;
} */

/* phone size query */
@media (max-width: 576px) { 
  #main-container {
    padding-top: 5vh;
  }
}

